# evermemos-rs

./: .gitignore  AGENTS.md  CLAUDE.md  README.md  flake.nix  litellm_logs_viewer.py
.github/instructions/: memory.instructions.md
evermemos-rs/: .env.template  Cargo.toml  README.md  TODO.md  docker-compose.otel.yaml  justfile  test_rerank_backend.py
evermemos-rs/.solution/: 055cca0-docs(evermemos-rs)--add-deployment-suite-and-cargo-install-workflow.md  215074d-feat-evermemos-rs--behavior-history-model-schema-repo-api-management-ui.md  3e1671a-feat-evermemos-rs--full-parity-21-21.md  45fe47b-feat-evermemos-rs---auto-start-server-in-test-scripts.md  6434850-test-evermemos-rs--add-unit-tests-for-memory-metabolism-and-user-profile-updates.md  6743f7c-fix-evermemos-rs---search-sql-alias--extraction-original_data--test-history.md  7d7f31c-feat-evermemos-rs---corememory-type---fix-group-profile-schema.md  885ec2a-feat-evermemos-rs---groupprofile-extraction-for-group-chat-scenes.md  89b2246-feat--feature-gate-behavior-history-and-refresh-dual-system-docs.md  948811f-mcp-server.md  9b38991-feat--keep-mcp-pending-history-and-sanitize-rerank-test-key.md  9f7757f-init-init-version.md  README.md  a602273-test-add-smoketest.md  dfdcdd9-feat-evermemos-rs--patch-conv-meta---global-user-profile-custom.md  e4c7937-feat--implement-memory-metabolism-and-profile-update-conflict-resolution.md  ed65938-feat-evermemos-rs--opentelemetry-observability--traces---metrics-.md
evermemos-rs/demo/: parity_test.py  server_utils.py  simple_demo.py  smoke_test.sh  test_completeness.py
evermemos-rs/docs/: CONFIG_REFERENCE.md  DEPLOYMENT.md  FILE_GUIDE.md  MCP_AGENT_RULES.md  README.md  RUST_VS_PYTHON.md
evermemos-rs/scripts/: sync_solutions.py
evermemos-rs/sdk/: README.md  pyproject.toml
evermemos-rs/sdk/python/: README.md  pyproject.toml  test_metabolism.py
evermemos-rs/sdk/python/evermemos_agent_lib/: __init__.py  adapters.py  client.py
evermemos-rs/sdk/rust/: Cargo.toml  README.md
evermemos-rs/sdk/rust/src/: adapters.rs  client.rs  error.rs  lib.rs  types.rs
evermemos-rs/sdk/typescript/: README.md  package-lock.json  package.json  tsconfig.json
evermemos-rs/sdk/typescript/src/: adapters.ts  client.ts  index.ts  types.ts
evermemos-rs/src/: config.rs  lib.rs  main.rs  mcp_main.rs  worker_main.rs
evermemos-rs/src/agentic/: manager.rs  mod.rs  prompts.rs  retrieval_utils.rs
evermemos-rs/src/agentic/strategies/: mod.rs
evermemos-rs/src/api/: behavior_history_router.rs  dto.rs  global_profile_router.rs  health_router.rs  memory_router.rs  middleware.rs  mod.rs  ui_router.rs
evermemos-rs/src/biz/: memorize.rs  mod.rs
evermemos-rs/src/core/: cache.rs  error.rs  metrics.rs  mod.rs  telemetry.rs  tenant.rs  tracing.rs
evermemos-rs/src/llm/: cassette.rs  mod.rs  openai.rs  provider.rs  rerank.rs  vectorize.rs
evermemos-rs/src/mcp/: mod.rs
evermemos-rs/src/memory/: cluster_manager.rs  episode_extractor.rs  event_log_extractor.rs  foresight_extractor.rs  group_profile_extractor.rs  manager.rs  memcell_extractor.rs  mod.rs  profile_extractor.rs
evermemos-rs/src/memory/prompts/: en.rs  mod.rs  zh.rs
evermemos-rs/src/storage/: db.rs  mod.rs  schema.rs
evermemos-rs/src/storage/models/: behavior_history.rs  cluster_state.rs  conversation_meta.rs  episodic_memory.rs  event_log.rs  foresight.rs  group_profile.rs  memcell.rs  mod.rs  request_log.rs  user_profile.rs
evermemos-rs/src/storage/repository/: behavior_history.rs  cluster_state.rs  conversation_meta.rs  episodic_memory.rs  event_log.rs  foresight.rs  group_profile.rs  memcell.rs  mod.rs  request_log.rs  user_profile.rs
evermemos-rs/src/tasks/: mod.rs  nats_worker.rs  task_types.rs
evermemos-rs/static/: behavior_history.html
