[package]
name = "evermemos-rs"
version = "0.1.0"
edition = "2021"
description = "EverMemOS rewritten in Rust — mobile-friendly long-term memory system for conversational AI"
license = "Apache-2.0"

[lib]
name = "evermemos_rs"
path = "src/lib.rs"

[[bin]]
name = "evermemos"
path = "src/main.rs"

[[bin]]
name = "evermemos-worker"
path = "src/worker_main.rs"

[[bin]]
name = "evermemos-mcp"
path = "src/mcp_main.rs"

[dependencies]
# ── Async runtime ────────────────────────────────────────────────────────────
tokio = { version = "1", features = ["full"] }

# ── Web framework ────────────────────────────────────────────────────────────
axum = { version = "0.8", features = ["macros"] }
tower = { version = "0.5", features = ["full"] }
tower-http = { version = "0.6", features = ["cors", "trace", "request-id"] }

# ── SurrealDB (document store + BM25 full-text + HNSW vector search) ─────────
# Replaces: MongoDB + Elasticsearch + Milvus
surrealdb = { version = "2", features = ["kv-rocksdb"] }

# ── Serialization ────────────────────────────────────────────────────────────
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# ── LLM — OpenAI-compatible (works with Ollama, vLLM, local models) ──────────
async-openai = "0.27"

# ── NATS — message queue (replaces Kafka + ARQ/Redis task queue) ──────────────
async-nats = "0.38"

# ── In-process cache (replaces Redis caching) ─────────────────────────────────
moka = { version = "0.12", features = ["future"] }

# ── Chinese tokenisation (replaces Python jieba) ─────────────────────────────
jieba-rs = "0.7"

# ── Configuration ─────────────────────────────────────────────────────────────
config = { version = "0.14", features = ["toml"] }
dotenvy = "0.15"

# ── Logging & tracing ────────────────────────────────────────────────────────
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }

# ── Error handling ───────────────────────────────────────────────────────────
thiserror = "2"
anyhow = "1"

# ── Utilities ────────────────────────────────────────────────────────────────
uuid = { version = "1", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
futures = "0.3"
async-trait = "0.1"
once_cell = "1"
regex = "1"

# ── HTTP client (embedding / rerank external APIs) ────────────────────────────
reqwest = { version = "0.12", features = [
    "json",
    "rustls-tls",
], default-features = false }

# ── Numeric / vector math ─────────────────────────────────────────────────────
ordered-float = { version = "4", features = ["serde"] }

[dev-dependencies]
tokio-test = "0.4"
tempfile = "3"

[profile.release]
# Optimised for size — important for mobile deployment
opt-level = "z"
lto = true
codegen-units = 1
strip = true
panic = "abort"
