[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "evermemos-agent-lib"
version = "0.1.0"
description = "Compatibility wrapper pointing to the canonical Python SDK under sdk/python"
readme = "python/README.md"
requires-python = ">=3.9"
dependencies = ["httpx>=0.27,<1"]

[tool.setuptools]
package-dir = { "" = "python" }

[tool.setuptools.packages.find]
where = ["python"]
include = ["evermemos_agent_lib*"]
