[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "evermemos-agent-lib"
version = "0.1.0"
description = "Framework-agnostic EverMemOS client library for agent development"
readme = "README.md"
requires-python = ">=3.9"
dependencies = ["httpx>=0.27,<1"]

[tool.setuptools]
package-dir = { "" = "." }

[tool.setuptools.packages.find]
where = ["."]
include = ["evermemos_agent_lib*"]
