[package]
name = "evermemos-agent-lib"
version = "0.1.0"
edition = "2021"
description = "Framework-agnostic Rust SDK for connecting agent frameworks to evermemos-rs"
license = "Apache-2.0"
repository = "https://github.com/dahai9/evermemos-rs"

[lib]
name = "evermemos_agent_lib"

[dependencies]
chrono = { version = "0.4", features = ["serde", "clock"] }
reqwest = { version = "0.12", default-features = false, features = [
    "json",
    "rustls-tls",
] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_urlencoded = "0.7"
thiserror = "2"
uuid = { version = "1", features = ["v4", "serde"] }
